# hooke-surveyor

./: .gitignore  CLAUDE.md  STRATEGY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: crown.md  forecast.md  generate.md  learn.md  ndvi-update.md  patrol.md  plant.md  rebuild.md  research.md  score.md  status.md  upload.md  watch.md
knowledge/: topics.json
knowledge/bioregion/: dorset_maritime.json
metamorphicTerritory/: Dockerfile  TODO.md  deploy.sh  docker-compose.yml  metamorphic-territory.service  pyproject.toml  requirements.txt
metamorphicTerritory/metamorphic_territory/: serve.py
scripts/: build_snapshot.py  run_crowns.py
species_db/: species.json
surveyor/: __init__.py  __main__.py  config.py  crowns.py  derivatives.py  gcs.py  graph.py  guild.py  risk.py  snapshot.py  watch.py
surveyor/research/: __init__.py  extractor.py  index.py  loop.py  scholar.py
surveyor/scores/: __init__.py  engine.py
surveyor/sim/: __init__.py  classify.py  fgr.py  forecast.py  gol.py  physarum.py  planting.py  terrain.py  verify.py
