[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metamorphic-territory"
version = "0.1.0"
description = "Planting scheme tile server — GoL + physarum + tippecanoe → MVT vector tiles"
requires-python = ">=3.11"
dependencies = [
    "h3>=4.0",
    "numpy>=1.26",
    "geopandas>=0.14",
    "pandas>=2.1",
    "shapely>=2.0",
    "scipy>=1.12",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "pyogrio>=0.7",
    "requests>=2.31",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
metamorphic-serve = "metamorphic_territory.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["metamorphic_territory"]
